# Telebot_countries_cities

./: README.md  config.py  main.py  pyproject.toml
src/: capitalize.db  dump_db.py  main.py  parser.py
