[tool.poetry]
name = "telebot-countries-cities"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytelegrambotapi = "^4.22.1"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"
fake-headers = "^1.0.2"
lxml = "^5.3.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
